knowledge-feature:知识库文件基础链路添加分块持久化逻辑、删除添加持久化层删除逻辑